<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">机动车查验通</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_to_cloud">登录机动车查验系统</string>
    <string name="tv_account">帐号：</string>
    <string name="tv_password">密码：</string>
    <string name="tv_forget_password">忘记密码</string>
    <string name="tv_vechicle_check">机动车查验</string>
    <string name="tv_find">发现·浏览</string>
    <string name="tv_my_file">我的文件</string>
    <string name="tv_menu_title">海量手机资源</string>
    <string name="tv_menu_msg">电子书 音乐 壁纸 铃声</string>
    <string name="tv_file_name">遇见未知的自己.txt</string>
    <string name="tv_file_msg">188.3M  修改时间:2012–11–23</string>
    <string name="tv_file_op_delete">删除</string>
    <string name="tv_file_op_download">下载</string>
    <string name="tv_file_op_share">分享</string>
    <string name="tv_file_op_more">更多</string>
    <string name="tv_menu_account">475500230@qq.com</string>
    <string name="tv_menu_space">219M / 7.4G</string>
    <string name="tv_menu_auto_backup">自动备份照片</string>
    <string name="tv_menu_transfer">传输管理</string>
    <string name="tv_menu_history">查看最近操作</string>
    <string name="tv_menu_connect">发送文件到电脑</string>
    <string name="tv_menu_reward">免费抽空间</string>
    <string name="tv_menu_setting">设置</string>
    <string name="tv_menu_logout">退出登录</string>
    <string name="btn_upload">上传</string>
    <string name="btn_download">下载</string>
    <string name="btn_more">更多</string>
    <string name="btn_share">分享</string>
    <string name="btn_show">显示</string>
    <string name="btn_add_accounts">设置</string>
    <string name="btn_quick_register">立即登录</string>
    <string name="et_account_hint">请输入您的用户名</string>
    <string name="et_password_hint">请输入密码</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tv_settings">设置</string>
     <string name="scan_text">将二维码放入框内, 即可自动扫描</string>

     <string name="menu_item1">注销</string>
     <string name="menu_item2">注销并退出</string>
     <string name="menu_item3">检查最新版本</string>
     <string name="menu_item4">版本代号</string>
     
     <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    
    
    <string name="remark_safety_accord">安全装置符合要求</string>
    <string name="remark_equipped_break">加装副刹车</string>
    <string name="remark_equipped_devices">加装辅助装置</string>
    
    <string name="takepicture_toast">提醒：1、货车、轿车拍摄三张照片【车架号、左前45度、右后45度】; 2：客车拍摄六张照片【前面三张、发动机舱(含灭火装置)、车内由前至后一张(包括安全出口、手锤)、驾驶台一张(包括三角架、灭火器、行车记录仪)】; 3:危化品拍摄三张【车架号、左前45度(包括三角牌、灭火器、喷涂货运介质)】</string>
    
    <string name="select_date">请选择日期</string>
     
</resources>