<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/rr_login"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bar_bg_gray"
        android:gravity="center"
        android:text="@string/login_to_cloud"
        android:textColor="@color/black"
        android:textSize="18sp" />
    <Button 
        android:layout_marginRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_alignRight="@id/tv_title"
        android:background="@drawable/button_nor"
        android:text="默认项"
        android:onClick="preReg"
        />

    <LinearLayout
        android:id="@+id/ll_account"
        style="@style/accountInputBorder"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="18dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_account"
            android:textColor="@color/grey" />

        <EditText
            android:id="@+id/username"
            style="@style/accountEditText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/et_account_hint" />
        <Button
            android:id="@+id/btn_selectusr"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/btn_show"
            android:text="选择"
            android:onClick="selectUsr"
            android:textColor="@color/grey"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_password"
        style="@style/accountInputBorder"
        android:layout_below="@id/ll_account"
        android:layout_marginTop="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_password"
            android:textColor="@color/grey" />

        <EditText
            android:id="@+id/password"
            style="@style/accountEditText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:hint="@string/et_password_hint" />

        <Button
            android:id="@+id/btn_showpwd"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/btn_show"
            android:text="@string/btn_show"
            android:onClick="showpwd"
            android:textColor="@color/grey"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/ll_password"
        android:layout_marginRight="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/tv_forget_password"
        android:textColor="@color/green"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/ll_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_forget_password"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="13dp" >

        <Button
            style="@style/accountButtonStyle"
            android:layout_marginRight="4dp"
            android:background="@drawable/btn_add_accounts"
            android:onClick="setting"
            android:text="@string/btn_add_accounts" />

        <Button
            style="@style/accountButtonStyle"
            android:layout_marginLeft="4dp"
            android:background="@drawable/btn_quick_register"
            android:onClick="enter"
            android:text="@string/btn_quick_register" />
    </LinearLayout>
    
    
    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="版本对象"
	        android:textColor="#FF8135"
	        android:textSize="14sp" />
	    
	    <TextView
	        android:id="@+id/tv_user_scope"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#FF8135"
	        android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>